# tributary-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs  streaming.rs
src/core/: graph.rs  mod.rs  node.rs
src/engine/: engine.rs  mod.rs  run.rs
src/nodes/: mod.rs  ops.rs
