[package]
name = "tributary"
version = "0.1.0"
authors = ["Tim Paine <t.paine154@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/timkpaine/tributary-rs"
description = "Data streams"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]

[features]
coverage = []
